force-app/main/default/objects/eqQuestion__c/eqQuestion__c.object-meta.xml
<CustomObject>
    <description>2019/10/17
Salesforce認定資格対策用オブジェクト
【問題データ格納用】</description>
    <label>資格試験問題</label>
    <nameField>
        <displayFormat>Q-{000000}</displayFormat>
        <label>Q-No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>