force-app/main/default/objects/eqQuestion__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <description>試験問題</description>
    <label>設問</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>