force-app/main/default/objects/eqQuestion__c/fields/ExamType__c.field-meta.xml
<CustomField>
    <fullName>ExamType__c</fullName>
    <description>問題に対応する資格試験</description>
    <label>認定資格名</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SalesforceCertificatedList</valueSetName>
    </valueSet>
</CustomField>