force-app/main/default/objects/eqQuestion__c/fields/PDF_No__c.field-meta.xml
<CustomField>
    <fullName>PDF_No__c</fullName>
    <description>過去問内に採番されているNo</description>
    <label>PDF No</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>