force-app/main/default/objects/eqQuestion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ExamType__c</columns>
    <columns>Detail__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>