force-app/main/default/objects/eqQuestion__c/listViews/Certification_Administrator.listView-meta.xml
<ListView>
    <fullName>Certification_Administrator</fullName>
    <columns>NAME</columns>
    <columns>Detail__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ExamType__c</field>
        <operation>equals</operation>
        <value>アドミニストレーター</value>
    </filters>
    <label>認定アドミニストレータ</label>
</ListView>