force-app/main/default/objects/eqQuestion__c/listViews/CertificationSalesCloud.listView-meta.xml
<ListView>
    <fullName>CertificationSalesCloud</fullName>
    <columns>NAME</columns>
    <columns>Detail__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ExamType__c</field>
        <operation>equals</operation>
        <value>Sales Cloud コンサルタント</value>
    </filters>
    <label>認定SalesCloudコンサルタント</label>
</ListView>