force-app/main/default/objects/eqQuestion__c/listViews/CertificationServiceCloud.listView-meta.xml
<ListView>
    <fullName>CertificationServiceCloud</fullName>
    <columns>NAME</columns>
    <columns>Detail__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ExamType__c</field>
        <operation>equals</operation>
        <value>Service Cloud コンサルタント</value>
    </filters>
    <label>認定ServiceCloudコンサルタント</label>
</ListView>